--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Skwerel</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/skwerelEJS/public/images/favicon.ico" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Henny+Penny|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>SKWEREL</h1>
+<%- include('partials/header.ejs') %>
 
-    <h3>Welcome to the best wishlist site on the net!!</h3>
+  <h1>SKWEREL</h1>
+  <h3 class='text-uppercase text-center'>Welcome to the best wishlist site on the net!!</h3>
 
-    <script src=""></script>
-  </body>
-</html>
+<%- include('partials/footer.ejs') %>
