--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header') %>
 
   <h1>SKWEREL</h1>
   <h3 class='text-uppercase text-center'>Welcome to the best wishlist site on the net!!</h3>
 
-<%- include('partials/footer.ejs') %>
+<%- include('partials/footer') %>
