--- a/views/popular.ejs
+++ b/views/popular.ejs
@@ -1,7 +1,5 @@
 <%- include('partials/header') %>
-
-  <h1>SKWEREL</h1>
-  <h3 class="text-uppercase text-center">Popular!!</h3>
+  <h1 style="font-size: 3rem; text-shadow: 1px 1px 5px white, 3px 3px 5px #061c06;">Popular and Trending Movies</h2>
   <%- include('partials/card', {movie: data}) %> 
   
 <%- include('partials/footer') %>
