--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="/popular">Trending Movies</a>
+          <a class="nav-link " aria-current="page" href="/upcoming">Upcoming Movies</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"></a>
