add styling for background image and card shadows

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,12 +6,18 @@
     <title>Skwerel</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Best website for collecting a wishlist of your favorite movies, books, tv shows and music."/>
     <link rel="icon" href="/skwerelEJS/public/images/favicon.ico" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Henny+Penny|Open+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Henny+Penny|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <%- include('navbar')  %> 
+    <%- include('navbar') %>
+  </body>
+</html>
