--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -35,7 +35,7 @@
       </ul>
       <form class="d-flex mb-1" action='/search'>
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-primary" type="submit">Search</button>
         <button class="btn btn-success ms-1" type="submit" formaction="/login">Login</button>
         <button class="btn btn-danger ms-1" type="submit" formaction="/logout">Logout</button>
       </form>
