--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <h1>Log in page!!</h1>
 
 <form action="/login">
-    <input type="text" name="username" placeholder="username">
+    <input type="text" name="username" placeholder="username" autocomplete="off">
     <input type="password" name="password" placeholder="password">
     <button formmethod='POST'>Login</button>
     <button type='submit' class="btn btn-danger" formaction='/signup' formmethod="GET">SignUp</button>
