--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <form action="/signup" method="post">
-  <input type="text" name="username" placeholder="username">
+  <input type="text" name="username" placeholder="username" autocomplete='off'>
   <input type="password" name="password" placeholder="password">
   <button class='btn btn-danger' type='submit'>Submit</button>
 </form>
