--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,7 +23,7 @@
             My Dreys
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Movies</a></li>
+            <li><a class="dropdown-item" href="/dreys/movies">Movies</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">TV</a></li>
             <li><hr class="dropdown-divider"></li>
