--- a/public/styles.css
+++ b/public/styles.css
@@ -88,6 +88,33 @@ button,
   font-weight: bold;
 }
 
+/* LOGIN FORM */
+form[action="/login"] {
+  
+  border: #b9550b 3px solid;
+  width: 25vw;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 2.5em;
+  /* text-shadow: 1px 1px 2px #b9550b, 1px 1px 2px black;  */
+  text-shadow: 1px 1px 2px #ffc2b4, 1px 1px 2px black; 
+  font-family: "Henny Penny", serif; /* default font*/
+  font-weight: 900;
+  padding: 1%;
+  box-shadow: -5px 5px 15px #061c06;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+form[action="/login"] input {
+  display: inline-block;
+}
+
+form[action="/login"] input:focus {
+  font-size: .75em;
+}
+
 /* #oakTree_container {
   height: 14vh;
   width: 25%;
