--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,11 +19,11 @@
           <a class="nav-link" href="#">Music</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="/my_dreys" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Dreys
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/dreys/movies">Movies</a></li>
+            <li><a class="dropdown-item" href="/movie_drey">Movies</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">TV</a></li>
             <li><hr class="dropdown-divider"></li>
