--- a/views/d_movies.ejs
+++ b/views/d_movies.ejs
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <h1 style="font-size: 3rem; text-shadow: 1px 1px 5px white, 3px 3px 5px #061c06;">My Movies</h2>
       <div class="row row-cols-auto" id='upcoming_container'>
-        <%- include('partials/card', {data: data.movies}) %> 
+        <%- include('partials/card', {data: data.movies, addMovie: false}) %> 
       </div>
     
   </div>
