--- a/views/upcoming.ejs
+++ b/views/upcoming.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <h1 style="font-size: 3rem; text-shadow: 1px 1px 5px white, 3px 3px 5px #061c06;">Upcoming and Trending Movies</h2>
     <div class="row row-cols-auto" id='upcoming_container'>
-      <%- include('partials/card', {movie: data}) %> 
+      <%- include('partials/card', {movie: data, addMovie: true}) %> 
     </div>
   
 </div>
