--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
 <form action="/login">
     <label class='form-label'>Username:
-        <input class="form-control" type="text" name="username" placeholder="username" autocomplete="off">
+        <input class="form-control" type="text" name="username" placeholder="username" autocomplete="off" autofocus>
     </label>
     <label class='form-label'>Password:
         <input class="form-control" type="password" name="password" placeholder="password">
